# openprover

./: CLAUDE_MAX_RESPONSE_CAP.md  DOCS.md  README.md  VLLM_MINIMAX_SUMMARY.md  VLLM_THINKING_AND_TOOLS_CONTROL.md  WORKER_ACTIONS_PLAN.md  lake_build.txt  pyproject.toml  todo.txt
examples/: addition.md  erdos_205.md  test.md
lumi/: deploy.sh
lumi/jobs/: job_interact.sh  job_interact_cpu.sh
openarxiv/: arxiv.py  build_data.py  package-lock.json  package.json  validate_mathjax.js
openarxiv/web/: index.html
openarxiv/web/src/components/: MathMarkdown.jsx
openarxiv/web/src/hooks/: useData.jsx
openarxiv/web/src/pages/: PaperDetail.jsx  PaperList.css  PaperList.jsx  ProblemDetail.css  ProblemDetail.jsx
openprover/: cli.py  inspect.py  lean.py  lean_data.py  llm.py  mcp_server.py  model_caps.py  prompts.py  prover.py  tui.py
openprover/lean/: core.py  data.py  mcp_server.py  tools.py
openprover/llm/: __init__.py  _base.py  claude.py  codex.py  hf.py  mistral.py
openprover/tui/: _colors.py  _input.py  _nav.py  _render.py  _steps.py  _stream.py  _tabs.py  _text.py  _types.py  headless.py  tui.py
scripts/: bench_hf.py  inspect_prompts.py  ping_hf.py  ping_mistral.py  run_proofbench.py  run_putnam.py  serve_hf.py
tests/: test_claude_client.py  test_cli_models.py  test_cli_validation.py  test_codex_client.py  test_interrupt_race.py  test_model_caps.py
